--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -1,49 +1,41 @@
-body {
-    font-family: Arial, sans-serif;
-    padding: 20px;
-  }
+.seccion {
+  max-width: 600px;
+  height: auto;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid black;
+  border-radius: 5px;
+  background-color: #f5f5f5;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh; /* Ajusta la altura de la sección según tus necesidades */
+  margin-top: 50px; /* Ajusta el valor del margen superior según tus necesidades */
+}
 
-  .seccion {
-    border: 1px solid #ccc;
-    padding: 20px;
-    margin-bottom: 20px;
-  }
+/*Estilos de los botones*/
+.boton-retroceder {
+  position: relative;
+  margin-right: 10px; 
+  top: 10px;  /* Ajusta la posicion vertical */
+  
+}
 
-  label {
-    display: block;
-    margin-bottom: 10px;
-  }
-
-  input[type="text"],
-  input[type="number"] {
-    width: 100%;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin-bottom: 10px;
-  }
-
-  input[type="radio"] {
-    margin-right: 5px;
-  }
-
-  input[type="submit"] {
-    padding: 10px 20px;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    cursor: pointer;
-  }
-
-  input[type="submit"]:hover {
-    background-color: #45a049;
-  }
+.boton-avanzar {
+  position: relative;
+  margin-left: 330px;
+  top: 10px;
+  
+}
 
 
+#seccion1, #seccion2, #seccion3, #seccion4 {
+  display: block;
+}
 
 
-
+/*Estilos del footer*/
 footer {
     background-color: #f2f2f2;
     padding: 20px;
